src/test/ui/parser/keyword-struct-as-identifier.stderr
error: expected pattern, found keyword `struct`
  --> $DIR/keyword-struct-as-identifier.rs:6:9
   |
LL |     let struct = "foo"; //~ error: expected pattern, found keyword `struct`
   |         ^^^^^^ expected pattern

error: aborting due to previous error

